--- a/Views/_UnAnsweredFAQs.cshtml
+++ b/Views/_UnAnsweredFAQs.cshtml
@@ -1,97 +1,86 @@
-@using PagedList.Mvc
-@using PagedList;
-@model StaticPagedList<QuestionsViewModel>
-@{
 
-    int index = ((Model.PageNumber - 1) * Model.PageSize) + 1;
-}
-@using (Ajax.BeginForm("Unanswered",
-        new AjaxOptions
-        {
-            HttpMethod = "GET",
-            UpdateTargetId = "unanswerQuestionsPane"
-        }))
-{
-    <input type="hidden" value="@ViewBag.pageSize" />
-    <div class="form-group" style="max-width:150px;">
-        <label for="exampleSelect">Select Size</label>
-        <select class="form-control" id="exampleSelect" name="pageSize" onchange="$(this).submit()">
-            <option value="">@ViewBag.CurrentPageSize</option>
-            <option value="-1">Show All</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="40">40</option>
-            <option value="50">50</option>
-          
-        </select>
-    </div>
+    @using PagedList.Mvc
+    @using PagedList;
+    @model StaticPagedList<QuestionsViewModel>
+    @{
+        RequireScript(Url.Action("~/Plugins/FAQPlugin/Resource/notification.js"));
+    }
 
-}
+    @using (Ajax.BeginForm("Unanswered",
+            new AjaxOptions
+            {
+                HttpMethod = "GET",
+                UpdateTargetId = "unanswerQuestionsPane"
+            }))
+    {
+        @Html.Partial("~/Plugins/FAQPlugin/Views/_PageSize.cshtml")
+    }
 
-<table class="table table-striped ">
-    <thead>
-        <tr>
-            <th><b>Sr</b></th>
-            <th>Product Name</th>
-            <th>Question</th>
-            <th>Answer</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var unAnsweredQuestions in Model)
-        {
-
-            <tr id="">
-                <td><b>@index</b></td>
-                <td><b><a href="#">@unAnsweredQuestions.ProductName </a></b></td>
-                <td>@unAnsweredQuestions.Question</td>
-                <td><button class="btn btn-primary" data-toggle="modal" data-target="#AnswerModal">Give Answer</button></td>
-
+    <table class="table table-striped ">
+        <thead>
+            <tr>
+                <th>Product Name</th>
+                <th>Question</th>
+                <th>Answer</th>
             </tr>
+        </thead>
+        <tbody>
+            @foreach (var unAnsweredQuestions in Model)
+            {
+                <tr>
+                    <td><b><a target="_blank" href="@Url.Action("EditProduct", "Product", new { ProductId = unAnsweredQuestions.ProductId })">@unAnsweredQuestions.ProductName</a></b></td>
+                    <td>@unAnsweredQuestions.Question</td>
+                    <td>
+                        <button class="btn btn-primary open-answer-modal" data-toggle="modal" data-target="#AnswerModal" data-question="@unAnsweredQuestions.Question" data-id="@unAnsweredQuestions.FAQId">Give Answer</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-            <!-- Answer Modal -->
-            <div class="modal fade" id="AnswerModal" tabindex="-1" role="dialog" aria-labelledby="AnswerModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="editAnswerModalLabel"> Answer</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+    <!-- Answer Modal -->
+    <div class="modal inmodal" id="AnswerModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content animated fadeIn">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title">Answer Question</h4>
+                    <p>.</p>
+                </div>
+                <div class="modal-body">
+                    @using (Ajax.BeginForm("UpdateAnswer",
+                    new AjaxOptions
+                    {
+                        HttpMethod = "POST",
+                        UpdateTargetId = "unanswerQuestionsPane",
+                        OnSuccess="AnswerSubmitted"
+                    }))
+                    {
+                        <label class="col-form-label"><h3><b id="modal-question">Question: </b></h3></label>
+                        <div class="form-group">
+                            <label for="answerText" class="col-form-label"><h4>Answer : </h4></label>
+                            <textarea required class="form-control" placeholder="Your answer ..." name="answer" id="answerText" rows="5"></textarea>
+                            <input type="hidden" name="id" id="modal-question-id">
+                            <input name="view" value="unanswered" hidden />
+                            <input type="hidden" name="pageSize" value="@ViewBag.PageSize" />
+                            <input type="hidden" name="pageNumber" value="@ViewBag.PageNumber" />
                         </div>
-                        <div class="modal-body">
-                            @using (Html.BeginForm("UpdateAnswer", "FAQAdmin", FormMethod.Post))
-                            {
-                                <label class="col-form-label"><h3><b>@unAnsweredQuestions.Question</b></h3></label>
-                                <div class="form-group">
-                                    <label for="answerText" class="col-form-label">Answer:</label>
-                                    <input type="text" required class="form-control"  name="answer" id="answerText">
-
-                                    <input type="number" hidden name="id" value="@unAnsweredQuestions.FAQId">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-primary">Save changes</button>
-                                </div>
-                            }
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" onclick="$('#AnswerModal').modal('hide');" class="btn btn-primary">Save changes</button>
                         </div>
-                    </div>
+                    }
                 </div>
             </div>
-            index++;
-        }
-    </tbody>
-</table>
+        </div>
+    </div>
 
-<div class="pagination-wrapper">
+    <div class="pagination-wrapper">
+        @Html.PagedListPager(Model,
+                page => Url.Action("Unanswered",
+                new { pageNumber = page, pageSize = ViewBag.pageSize }),
+                PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "unanswerQuestionsPane" }))
+    </div>
 
 
-    @Html.PagedListPager(Model,
-    page => Url.Action("Unanswered",
-    new { pageNumber = page, pageSize = ViewBag.pageSize }),
-    PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "unanswerQuestionsPane" }))
 
-</div>
