--- a/Views/_AllFAQs.cshtml
+++ b/Views/_AllFAQs.cshtml
@@ -1,10 +1,7 @@
+
 @using PagedList.Mvc
 @using PagedList;
 @model StaticPagedList<QuestionsViewModel>
-@{
-
-    int index = ((Model.PageNumber - 1) * Model.PageSize) + 1;
-}
 
 @using (Ajax.BeginForm("All",
         new AjaxOptions
@@ -13,89 +10,105 @@
             UpdateTargetId = "allQuestionsPane"
         }))
 {
-    <input type="hidden" value="@ViewBag.pageSize" />
-    <div class="form-group" style="max-width:150px;">
-        <label for="exampleSelect">Select Size</label>
-        <select class="form-control" id="exampleSelect" name="pageSize" onchange="$(this).submit()">
-            <option value="">@ViewBag.CurrentPageSize</option>
-            <option value="-1">Show All</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="40">40</option>
-            <option value="50">50</option>
-
-        </select>
-    </div>
+    @Html.Partial("~/Plugins/FAQPlugin/Views/_PageSize.cshtml")
 
 }
 
-<table class="table table-striped ">
+
+@using (Ajax.BeginForm("DeleteFAQ", "FAQAdmin", new AjaxOptions
+{
+    HttpMethod = "POST",
+    UpdateTargetId = "allQuestionsPane",
+    OnSuccess = "Deleted",
+
+}, new { id = "deleteForm" }))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" name="id" id="deleteId" />
+    <input  type="hidden" name="pageSize" value="@ViewBag.PageSize"/>
+    <input  type="hidden" name="pageNumber" value="@ViewBag.PageNumber" />
+}
+
+<table class="table table-striped">
     <thead>
         <tr>
-            <th><b>Sr</b></th>
             <th>Product Name</th>
             <th>Question</th>
             <th>Answer</th>
-            <th>Is Answered Status</th>
             <th>Action</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var allQuestions in Model)
         {
-
             <tr>
-                <td><b>@index</b></td>
-                <td><b><a>@allQuestions.ProductName </a></b></td>
+               <td><b><a target="_blank" href="@Url.Action("EditProduct", "Product", new { ProductId = allQuestions.ProductId })">@allQuestions.ProductName</a></b></td>
                 <td>@allQuestions.Question</td>
-                <td><a>@allQuestions.Answer</a></td>
-                <td text-center">@allQuestions.IsAnswered</td>
-                <td><button class="btn btn-danger" data-toggle="modal" data-target="#confirmaDeletionModal">Delete</button></td>
+                <td>
+                    @if (string.IsNullOrEmpty(allQuestions.Answer))
+                    {
+                        <a class="text-danger">
+                            Pending
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="#" class="answer-link-fromAll" data-toggle="modal" data-questionall="@allQuestions.Question" data-answerall="@allQuestions.Answer" data-idall="@allQuestions.FAQId" data-target="#editAnswerModalFromAll">
+                            @allQuestions.Answer
+                        </a>
+                    }
+                </td>
+                <td>
+                    <button type="button"
+                            class="btn btn-xs btn-danger btn-uninstall"
+                            data-id="@allQuestions.FAQId"
+                            data-question="@allQuestions.Question">
+                        Delete
+                    </button>
+                </td>
             </tr>
-            <div class="modal fade" id="confirmaDeletionModal" tabindex="-1" role="dialog" aria-labelledby="confirmaDeletionModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="confirmaDeletionModalLabel">Delete Question</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-
-                            @using (Html.BeginForm("DeleteFAQ", "FAQAdmin", FormMethod.Post))
-                            {
-                                <label class="col-form-label"><h3><b>@allQuestions.Question</b></h3></label>
-                                <div class="form-group">
-                                    <label for="answerText" class="col-form-label">Are you sure you want to delete the question ?</label>
-                                    <label for="answerText" class="col-form-label"><small>You will not be able to undo this action</small></label>
-                                    <input name="id" value="@allQuestions.FAQId" hidden />
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </div>
-                            }
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            index++;
         }
     </tbody>
 </table>
+<!--Update modal-->
+<div class="modal inmodal" id="editAnswerModalFromAll" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animated fadeIn">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Answer Question</h4>
+                <p>.</p>
+            </div>
+            <div class="modal-body">
+                @using (Ajax.BeginForm("UpdateAnswer",
+                new AjaxOptions
+                {
+                    HttpMethod = "POST",
+                    UpdateTargetId = "allQuestionsPane",
+                    OnSuccess = "AnswerUpdated"
+                }))
+                {
+                    <label class="col-form-label"><h3><b id="modal-question-all">Question : </b></h3></label>
+                    <div class="form-group">
+                        <label for="answerText" class="col-form-label" id="modal-answer-all">Answer:</label>
+                        <textarea required class="form-control" name="answer" id="answerText" rows="5"></textarea>
+                        <input type="number" hidden name="id" id="modal-question-id-all">
+                        <input name="view" value="all" hidden />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" onclick="$('#editAnswerModalFromAll').modal('hide');" class="btn btn-primary">Update changes</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="pagination-wrapper">
-
-
     @Html.PagedListPager(Model,
     page => Url.Action("All",
     new { pageNumber = page, pageSize = ViewBag.pageSize }),
     PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "allQuestionsPane" }))
-
 </div>
+
