--- a/Views/_AnsweredFAQs.cshtml
+++ b/Views/_AnsweredFAQs.cshtml
@@ -2,10 +2,7 @@
 @using PagedList.Mvc
 @using PagedList;
 @model StaticPagedList<QuestionsViewModel>
-@{
 
-    int index = ((Model.PageNumber - 1) * Model.PageSize) + 1;
-}
 @using (Ajax.BeginForm("Answered",
         new AjaxOptions
         {
@@ -13,27 +10,13 @@
             UpdateTargetId = "answeredQuestionsPane"
         }))
 {
-    <input type="hidden" value="@ViewBag.pageSize" />
-    <div class="form-group" style="max-width:150px;">
-        <label for="exampleSelect">Select Size</label>
-        <select class="form-control" id="exampleSelect" name="pageSize" onchange="$(this).submit()">
-            <option value="">@ViewBag.CurrentPageSize</option>
-            <option value="-1">Show All</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="40">40</option>
-            <option value="50">50</option>
-           
-        </select>
-    </div>
+    @Html.Partial("~/Plugins/FAQPlugin/Views/_PageSize.cshtml")
 
 }
+
 <table class="table table-striped">
     <thead>
         <tr>
-            <th><b>Sr</b></th>
             <th>Product Name</th>
             <th>Question</th>
             <th>Answer</th>
@@ -44,66 +27,67 @@
         @foreach (var faq in Model)
         {
             <tr>
-                <td><b>@index</b></td>
-                <td><b><a>@faq.ProductName</a></b></td>
+                <td><b><a target="_blank" href="@Url.Action("EditProduct", "Product", new { ProductId = faq.ProductId })">@faq.ProductName</a></b></td>
                 <td>@faq.Question</td>
                 <td>
-                    <a href="#" class="answer-link" data-toggle="modal" data-target="#editAnswerModal">
+                    <a href="#" class="answer-link" data-toggle="modal" data-questionupdate="@faq.Question" data-answerupdate="@faq.Answer" data-idupdate="@faq.FAQId" data-target="#editAnswerModal">
                         @faq.Answer
                     </a>
                 </td>
-
                 <td class="text-center">
-                    @using (Ajax.BeginForm("ChangeVisibility", "FAQAdmin", new { id = faq.FAQId, visibility = !faq.Visibility }, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "faq-list", OnSuccess = "toggleIcon" }))
+                    @using (Ajax.BeginForm("ChangeVisibility", "FAQAdmin", new { id = faq.FAQId, visibility = !faq.Visibility }, new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "faq-list", OnSuccess = $"toggleIcon('iconid-{faq.FAQId}')" }))
                     {
                         <button type="submit" class="btn btn-link">
-                            <i id="iconid" class="fa @(faq.Visibility ? "fa-eye" : "fa-eye-slash")"></i>
+                            <i id="iconid-@faq.FAQId" class="fa @(faq.Visibility ? "fa-eye" : "fa-eye-slash")"></i>
                         </button>
                     }
                 </td>
             </tr>
-
-            <div class="modal fade" id="editAnswerModal" tabindex="-1" role="dialog" aria-labelledby="editAnswerModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="editAnswerModalLabel">Edit Answer</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            @using (Html.BeginForm("UpdateAnswer", "FAQAdmin", FormMethod.Post))
-                            {
-                                <label class="col-form-label"><h3><b>@faq.Question</b></h3></label>
-                                <div class="form-group">
-                                    <label for="answerText" class="col-form-label">Answer:</label>
-                                    <input type="text" required placeholder="@faq.Answer" class="form-control" name="answer" id="answerText">
-
-                                    <input type="number" hidden name="id" value="@faq.FAQId">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-primary">Update changes</button>
-                                </div>
-                            }
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            index++;
         }
     </tbody>
 </table>
 
+<!--Update Modal-->
+<div class="modal inmodal" id="editAnswerModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animated fadeIn">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Answer Question</h4>
+                <p>.</p>
+            </div>
+            <div class="modal-body">
+                @using (Ajax.BeginForm("UpdateAnswer",
+                new AjaxOptions
+                {
+                    HttpMethod = "POST",
+                    UpdateTargetId = "answeredQuestionsPane",
+                    OnSuccess = "AnswerUpdated"
+                }))
+                {
+                    <label class="col-form-label"><h3><b id="modal-question-update">Question : </b></h3></label>
+                    <div class="form-group">
+                        <label for="answerText" class="col-form-label" id="modal-answer-update">Answer:</label>
+                        <textarea required class="form-control" name="answer" id="answerText" rows="5"></textarea>
+                        <input type="hidden" name="pageSize" value="@ViewBag.PageSize" />
+                        <input type="hidden" name="pageNumber" value="@ViewBag.PageNumber" />
+                        <input type="number" hidden name="id" id="modal-question-id-update">
+                        <input name="view" value="answered" hidden />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" onclick="$('#editAnswerModal').modal('hide');" class="btn btn-primary">Update changes</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="pagination-wrapper">
-
-
     @Html.PagedListPager(Model,
     page => Url.Action("Answered",
     new { pageNumber = page, pageSize = ViewBag.pageSize }),
     PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "answeredQuestionsPane" }))
-
 </div>
 
