--- a/Views/_FAQWidget.cshtml
+++ b/Views/_FAQWidget.cshtml
@@ -9,17 +9,17 @@
             <div id="accordion" role="tablist" aria-multiselectable="true">
                 @foreach (var faq in Model.fAQs)
                 {
-
+                    var faqId = $"faq-{faq.Id}"; // Unique ID for each FAQ
 
                     <div class="card mb-4">
-                        <div class="card-header" role="tab" id="heading1" style="padding: 20px;">
+                        <div class="card-header" role="tab" id="heading-@faqId" style="padding: 20px;">
                             <h4 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                                <a class="collapsed" data-toggle="collapse" href="#collapse-@faqId" aria-expanded="false" aria-controls="collapse-@faqId">
                                     @faq.Question <i class="fa fa-arrow-down"></i>
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1" data-parent="#accordion">
+                        <div id="collapse-@faqId" class="collapse" role="tabpanel" aria-labelledby="heading-@faqId" data-parent="#accordion">
                             <div class="card-body" style="padding: 20px;">
                                 <h5>
                                     <i>
@@ -31,8 +31,6 @@
                     </div>
                 }
 
-
-
                 <button type="button" class="btn btn-primary" style="margin:10px 0px;align-content:center" data-toggle="modal" data-target="#askQuestionModal">Ask a Question</button>
                 <div class="pull-right mx-3">
                 </div>
@@ -43,28 +41,25 @@
         </div>
     </div>
 
-
-
-    <div class="modal fade" id="askQuestionModal" tabindex="-1" role="dialog" aria-labelledby="askQuestionModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
+    <div class="modal inmodal fade" id="askQuestionModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content animated fadeIn">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="askQuestionModalLabel">Ask a Question</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title">Ask a Question</h4>
+                    <p>.</p>
                 </div>
-                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = " $('#askQuestionModal').modal('hide');", OnFailure = "toastr.error('Input Field cannot be empty');" }, new { id = "ask-question-form", @class = "form" }))
+                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = "$('#askQuestionModal').modal('hide'); $('#askQuestionModal input[name=question]').val(''); if (typeof toastr === 'undefined') { $.getScript('https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js', function() { toastr.success('Question submitted successfully'); }); } else { toastr.success('Question submitted successfully'); }", OnFailure = "toastr.error('Input Field cannot be empty');" }, new { id = "ask-question-form", @class = "form" }))
                 {
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="question">Your Question</label>
-                            <input name="question" class="form-control" placeholder="Type your question here"  />
-                            
+                            <input name="question" required class="form-control" placeholder="Type your question here" />
+
                             @Html.Hidden("productId", Model.ProductId)
 
                         </div>
-                        <div class="modal-footer ">
+                        <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary" id="submit-question">Submit Question</button>
                         </div>
@@ -74,4 +69,3 @@
         </div>
     </div>
 </div>
-
